# email-wallet-monorepo-icbc2023

./: .env.example  .gitmodules  Cargo.toml  README.md  entry_config.json  entry_config_example.json
regex_lib/: Cargo.toml
regex_lib/src/: lib.rs
src/: entry_config.rs  gen_relayer_configs.rs  gen_solidity.rs  main.rs
src/templates/: .env.template  DeployManipulator.s.sol.template  app_default.config
vrm/: Cargo.toml
vrm/src/: DeployManipulator.s.sol.template  Manipulator.sol.template  VerifierWrapper.sol  VerifierWrapper.sol.template  app_default.config  entry_config.rs  gen_regex_defs.rs  gen_relayer_configs.rs  gen_solidity.rs  gen_verifier_wrapper.rs  js_caller.rs  main.rs  regex.js  setup.sh
